feat: [BE] cleanup url
