# backend/internal/url/entity/url.go
@@ -1,0 +1,9 @@
+package entity
+
+import "backend/pkg/constant"
+
+type URL struct {
+	Operation    constant.URLOperation
+	InitialURL   string
+	ProcessedURL string
+}
