# backend/internal/url/handler/dto/request.go
@@ -1,0 +1,8 @@
+package dto
+
+import "backend/pkg/constant"
+
+type URLRequest struct {
+	URL       string                `json:"url" binding:"required"`
+	Operation constant.URLOperation `json:"operation" binding:"required"`
+}
