# backend/internal/url/handler/dto/response.go
@@ -1,0 +1,5 @@
+package dto
+
+type URLResponse struct {
+	ProcessedURL string `json:"processed_url"`
+}
